--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
   </head>
   <body>
 	<div id="app"/>
 	
-  <script type="text/javascript" src="bundle.js"></script></body>
+  <script type="text/javascript" src="/bundle.js"></script></body>
 </html>
