--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-  </head>
-  <body>
-	<div id="app"/>
-	
-  <script type="text/javascript" src="/bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en" dir="ltr"><head><meta charset="utf-8"/></head><body><div id="app"/><script src="/bundle.js"></script></body></html>
