--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
 	<meta charset="utf-8" />
+
+	<% if (htmlWebpackPlugin.options.production) { %>
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','<%= htmlWebpackPlugin.options.gmtContainerId %>');</script>
+	<!-- End Google Tag Manager -->
+	<% } %>
+
+
 	<!-- ****** faviconit.com favicons ****** -->
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
@@ -26,6 +38,12 @@
 	<!-- ****** faviconit.com favicons ****** -->
   </head>
   <body>
+	<% if (htmlWebpackPlugin.options.production) { %>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<%= htmlWebpackPlugin.options.gmtContainerId %>"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	<% } %>
 	<div id="app"/>
 	
   </body>
